--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 	<dependency>
 			<groupId>org.rascalmpl</groupId>
 			<artifactId>rascal</artifactId>
-			<version>0.9.3</version>
+			<version>0.18.0-SNAPSHOT</version>
 		</dependency>
   </dependencies>
   <build>
