--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>org.rascalmpl</groupId>
 			<artifactId>rascal</artifactId>
-			<version>0.18.0-SNAPSHOT</version>
+			<version>0.17.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
