--- a/pom.xml
+++ b/pom.xml
@@ -46,44 +46,44 @@
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<testSourceDirectory>src/test/java</testSourceDirectory>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.rascalmpl</groupId>
-				<artifactId>rascal-maven-plugin</artifactId>
-				<version>0.3.4</version>
-				<configuration>
-					<bin>${project.build.outputDirectory}</bin>
-					<errorsAsWarnings>true</errorsAsWarnings>
-					<enableStandardLibrary>true</enableStandardLibrary>
-					<srcs>
-						<src>${project.basedir}/src/main/rascal</src>
-					</srcs>
-					<srcIgnores>
-						<ignore>${project.basedir}/src/main/rascal/lang/jimple/toolkit/GraphUtil.rsc</ignore>
-						<ignore>${project.basedir}/src/main/rascal/lang/jimple/toolkit/CallGraph.rsc</ignore>
-					</srcIgnores>
-				</configuration>
-				<executions>
-					<execution>
-						<id>it-compile</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.7.0</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
+	
+				<plugin>
+					<groupId>org.rascalmpl</groupId>
+					<artifactId>rascal-maven-plugin</artifactId>
+					<version>0.3.4</version>
+					<configuration>
+						<bin>${project.build.outputDirectory}</bin>
+						<errorsAsWarnings>true</errorsAsWarnings>
+						<enableStandardLibrary>true</enableStandardLibrary>
+						<srcs>
+							<src>${project.basedir}/src/main/rascal</src>
+						</srcs>
+						<srcIgnores>
+							<ignore>${project.basedir}/src/main/rascal/lang/jimple/toolkit/GraphUtil.rsc</ignore>
+							<ignore>${project.basedir}/src/main/rascal/lang/jimple/toolkit/CallGraph.rsc</ignore>
+						</srcIgnores>
+					</configuration>
+					<executions>
+						<execution>
+							<id>it-compile</id>
+							<phase>compile</phase>
+							<goals>
+								<goal>compile</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
-
 </project>
